apps/gotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
spec:
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - pc
      containers:
        - name: gotify
          image: gotify/server:2.2
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app/data
              name: data
      volumes:
        - name: data
          nfs:
            path: /mnt/disk1/gotify/data
            server: 192.168.0.14
